// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders private page with menu 1`] = `
<div
  className="app"
>
  <div>
    <div>
      <div
        className="strips"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        className="clear"
      />
    </div>
    <div
      className="ui topbar-mobile menu"
    >
      <a
        className="item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="bars icon"
        />
      </a>
      <a
        className="item logo"
        href="/home"
        onClick={[Function]}
      >
        <img
          className="ui image"
          src="magazineluiza.png"
        />
      </a>
    </div>
    <div
      className="ui navbar menu"
    >
      <a
        className="item"
        href="/"
        onClick={[Function]}
      >
        <img
          className="ui image logo"
          src="magazineluiza.png"
        />
      </a>
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <div
        className="right menu logout"
      >
        <div
          aria-expanded={false}
          className="ui item dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            Olá, CBT_SILVA
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <a
              className="item"
              href="/logout"
              onClick={[Function]}
              role="option"
            >
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ui segment pushable"
  >
    <div
      className="ui inverted vertical labeled icon ui overlay left thin sidebar menu"
    >
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <a
        className="item"
        href="/logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
    <div
      className="pusher"
    >
      <div
        className="ui basic segment"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders public page without menu 1`] = `
<div
  className="app"
>
  <div
    className="ui segment pushable"
  >
    <div
      className="ui inverted vertical labeled icon ui overlay left thin sidebar menu"
    >
      <div
        aria-expanded={false}
        className="ui item dropdown active"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Comercial
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Logística
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
          <a
            className="item"
            href="/home"
            onClick={[Function]}
            role="option"
          >
            Inicio
          </a>
        </div>
      </div>
      <div
        aria-expanded={false}
        className="ui item dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          Tema
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <a
            className="item"
            href="/theme"
            onClick={[Function]}
            role="option"
          >
            Tema
          </a>
        </div>
      </div>
      <a
        className="item"
        href="/logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
    <div
      className="pusher"
    >
      <div
        className="ui basic segment"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;
